; ModuleID = '/home/carl/AnghaBench/libgit2/tests/odb/backend/extr_nonrefreshing.c_setup_repository_and_backend.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/odb/backend/extr_nonrefreshing.c_setup_repository_and_backend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"testrepo.git\00", align 1
@_repo = common dso_local global i32 0, align 4
@_objects = common dso_local global i32 0, align 4
@_fake = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @setup_repository_and_backend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_repository_and_backend() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  store i32* null, i32** %1, align 8
  store i32* null, i32** %2, align 8
  %3 = call i32 @cl_git_sandbox_init(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  store i32 %3, i32* @_repo, align 4
  %4 = load i32, i32* @_objects, align 4
  %5 = call i32 @build_fake_backend(i32** %2, i32 %4)
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32, i32* @_repo, align 4
  %8 = call i32 @git_repository_odb__weakptr(i32** %1, i32 %7)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32*, i32** %1, align 8
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @git_odb_add_backend(i32* %10, i32* %11, i32 10)
  %13 = call i32 @cl_git_pass(i32 %12)
  %14 = load i32*, i32** %2, align 8
  store i32* %14, i32** @_fake, align 8
  ret void
}

declare dso_local i32 @cl_git_sandbox_init(i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @build_fake_backend(i32**, i32) #1

declare dso_local i32 @git_repository_odb__weakptr(i32**, i32) #1

declare dso_local i32 @git_odb_add_backend(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
